# adventofcode

./: 1201.ipynb  1202.ipynb  1206.ipynb  README.md  pyproject.toml
2019/: 1203.ipynb  1204.ipynb  1205.ipynb
2020/: 1201.ipynb  1202.ipynb  1203.ipynb  1204.ipynb  1205.ipynb  1206.ipynb  1207.ipynb  1208.ipynb  1209.ipynb  1210.ipynb
2023/: 20231201.ipynb  20231202.ipynb  20231203.ipynb  20231204.ipynb  20231205.ipynb  20231206.ipynb  20231207.ipynb  20231208.ipynb
2025/: 20251201.ipynb  20251202.ipynb  20251203.ipynb  20251204.ipynb
